调整jwt加密方式与.netcore一致